--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/favicon.ico">
   <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="author" content="Baicheng Guo">
 
-  <title>John Doe - Business Administration</title>
+  <title>Baicheng Guo - Economist</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Baicheng Guo</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/baichengguo.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,28 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Baicheng Guo
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Economist📚</div>
+        <p class="lead mb-4">My name is Baicheng Guo, from Shenzhen, China, 20 years old. and I am currently a freshman student at the University of California Riverside with the major of Economics and will be graduated in 2023. I am good at playing tennis, singing, and programming. I am interested in the topic of Computer Science and economic. That is the reason that makes me took both classes in my academic year in college because I want to learn more about it. Since I was in middle school, my parents will take me to the CES show in Las Vegas every year till now. The CES stands for Consumer Electronics Show, it was one of the worldwide largest show that different companies from all over the world will come together, and show the world there newest products. The first time I went to the show, I was amazed by how high technology the world was, and how limited my view was. <br><br>
 
-        Enter bio here<br><br>
+       I was attracted by every product on the show, I do not want to leave till the last day of the show. One of the great products that were just come up that year but it attracted me was the 3D printer. I think it was a great product because it just came out, so it still needs to be improve, but it will have a big market in the future. After I went back home, I asked my parent to buy me one that was a DIY version, which means it came with separate parts, and I will need to build it by myself. With my hard work and finally finished it, but the hard part of the product was not to build it but to use the computer to create the thing you want to print. After that, I started to learn about programming, and I very enjoyed it. I also told my parent how great I think the product of the 3D printer was, and I thought it will have a unlimited use in the future, I suggest them to maybe have a team to do research about it, but as I was still just a teenager, they think I was just joking. The second-year I went to the CES show, the 3D printer was the hottest product in the show, that every big company was all trying to have a bit on this “big cake”. 
+<br><br>
 
-        Enter bio here
+        The CES show made me know how much I like about technology and the world economy. So when I go to college, I join an organization, called the Chinese Union. The purpose of the organization is to help the new students to better fit into the new college life. There was different job in the organization, and I be one of the member of the Business department. My job will need to to go talk to different restaurants around the school and make a deal with them, so they can have discounts for us and we will give those discounts to students in the school that needed. This experience also let me know how hard it is to do business in real society, treat off is very important that everyone want to get benefit from a deal. I think even I had some experience in economic already, but I think they are not enough, I still need more experience in order for me to be closer to professional.
+
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
+          <a target="_blank" href="https://www.linkedin.com/in/%E6%9F%8F%E6%89%BF-%E9%83%AD-2369a91a9/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/baichengguo">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href="https://twitter.com/1587972528qqco1">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:bguo018@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,12 +94,12 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Chinese Union member</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.chineseunion.org/">Chinese Union</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Leader in the student orientation<br> 
+              • Go help in Fodd Bank event<br>
+              • By part of the Chinese Spring Festival Gala<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -107,15 +109,15 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">Consumer Electronics Show</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">CES interpreter</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Help a company get ready of the show<br>
+              • Help Chinese people translate English during the show<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">2016 - 2020</span>
           </div>
         </div>
 
@@ -123,17 +125,16 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Southland Christian High School</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Grades student's test and quiz<br>
+            • Help teacher prepare for class<br>
+            • Set up class materials<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">2017-2019</span>
           </div>
         </div>
 
@@ -152,33 +153,33 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">The College of Humanities, Arts, and Social Sciences</div>
+            <div>Economicss</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2019 - December 2023</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Math</div>
+            <div>Calculus</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">Fall of 2019s</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div class="subheading mb-3">Business</div>
+            <div>Indroduction to Business</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">Winter of 2019</span>
           </div>
         </div>
 
@@ -191,7 +192,19 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/CS(1).JPG" width="500px">
+        </center>
+        <br>
+        <center>
+            <img src="img/CS(2).JPG" width="500px">
+        </center>
+        <br>
+        <center>
+            <img src="img/cs (3).JPG" width="500px">
+        </center>
+        <br>
+        <center>
+            <img src="img/CS(4).JPG" width="500px">
         </center>
       </div>
     </section>
@@ -199,7 +212,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Baicheng Guo</center><br>
 
 
   </div>
